# pyforces

./: README-zh.md  README.md  pyproject.toml
pyforces/: __init__.py  __main__.py  client.py  config.py  utils.py
pyforces/cf/: execute.py  parser.py  problem.py
pyforces/cmd/: config.py  main.py  parse.py  race.py  submit.py  test.py
