[project]
name = "pyforces"
description = "Yet another Codeforces CLI tool"
dynamic = ["version"]
dependencies = [
	"cloudscraper",
	"lxml",
	"countdown-timer",
]
requires-python = ">= 3.10"
license = "WTFPL"
readme = "README.md"
authors = [ {name = "Dennis Liu", email = "1486701401@qq.com"} ]

[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "no-guess-dev"  # uses tag if present; else commit hash
local_scheme = "node-and-date"   # makes version unique per commit
fallback_version = "0.1.0"

[tool.setuptools.dynamic]
version = {attr = "pyforces.__version__"}

[project.scripts]
pyforces = "pyforces.__main__:main"
